Stretch goal complete! Fixed header.

--- a/css/index.css
+++ b/css/index.css
@@ -175,21 +175,38 @@ header .logo {
   display: block;
   font-family: 'Russo One', sans-serif;
   font-size: 4rem;
+  opacity: 0.9;
   padding: 1rem 0;
+  position: fixed;
   text-align: center;
+  top: 0;
   color: inherit;
   text-decoration: none;
-  width: 100%;
+  width: 1024px;
   color: #23293B;
 }
 header .logo:hover {
   text-decoration: underline;
 }
+@media (max-width: 500px) {
+  header .logo {
+    width: 100%;
+  }
+}
 nav {
   background: #F6F6F6;
   border-bottom: 1px solid #F1F1F1;
   display: flex;
+  opacity: 0.9;
   padding: 1rem 0;
+  position: fixed;
+  top: 60px;
+  width: 1024px;
+}
+@media (max-width: 500px) {
+  nav {
+    width: 100%;
+  }
 }
 nav div {
   margin: 0 auto;
@@ -210,6 +227,7 @@ nav div a:hover {
   display: block;
   margin: 0 auto;
   width: 80%;
+  margin-top: 97px;
 }
 @media (max-width: 500px) {
   .home .intro img {
