--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,7 @@
     img {
       border-radius: 5px;
       .width-main;
+      margin-top: 97px;
       @media @min-break {
         width: 100%;
       }
